<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/background"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar"
    >

    <ImageView
        android:id="@+id/signUp_imgProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/ic_baseline_wallpaper_24" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pseudo"
        android:textSize="20dp"
        android:textColor="@color/background_button"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/signUp_pseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20dp"
        android:textColor="@color/background_button"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/signUp__email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20dp"
        android:textColor="@color/background_button"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/signUp_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />
    <ProgressBar
        android:id="@+id/signUp_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/signUp_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/btn_register"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/background"
        android:textStyle="bold"
        android:background="@color/background_button"
        />
</LinearLayout>